Fixing several small styling issues
	- Added a small space when the intro video is not
	showing up. Removed the video container space
	- Fixed nominated genes list component styling
	- Fixed Terms & conditions page styling
	- Changed info icon from png to svg
	- Closes #614
	- Closes #616
	- Closes #619
	- Closes #628
	- Closes #641

--- a/src/app/core/terms/terms.component.scss
+++ b/src/app/core/terms/terms.component.scss
@@ -14,11 +14,6 @@
 .download-terms-desc {
     margin-bottom: 2%;
 
-    h2 {
-        color: $brand-color-content;
-        font-size: $font-size-xxx-regular;
-    }
-
     .about-paragraph {
         margin-bottom: 40px;
     }
@@ -32,5 +27,5 @@
     color: #5BB0B5;
     text-decoration: underline;
     cursor: pointer;
-    font-size: $font-size-xxxx-regular;
+    font-size: $font-size-x-regular;
 }
