--- a/src/assets/css/helpers/_variables.scss
+++ b/src/assets/css/helpers/_variables.scss
@@ -8,6 +8,8 @@ $lato-font-path: '~lato-font/fonts';
 
 $navbar-height: 87px;
 $footer-height: 100px;
+$video-height: 262px;
+$video-width: 471px;
 
 $font-size-small: 12px;
 $font-size-regular: 16px;
